<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gestionar_productos">

    <EditText
        android:id="@+id/codigo"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/codigo"
        app:layout_constraintBottom_toTopOf="@+id/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/cantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/codigo" />

    <EditText
        android:id="@+id/cantidad"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cantidad"
        app:layout_constraintBottom_toTopOf="@+id/ver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <Button
        android:id="@+id/ver"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde"
        android:text="@string/ver"
        android:textColor="@color/Blanco"
        app:layout_constraintBottom_toTopOf="@+id/insertar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidad" />

    <Button
        android:id="@+id/insertar"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde"
        android:text="@string/insertar"
        android:textColor="@color/Blanco"
        app:layout_constraintBottom_toTopOf="@+id/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ver" />

    <Button
        android:id="@+id/modificar"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde"
        android:text="@string/modificar"
        android:textColor="@color/Blanco"
        app:layout_constraintBottom_toTopOf="@+id/borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertar" />

    <Button
        android:id="@+id/borrar"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde"
        android:text="@string/borrar"
        android:textColor="@color/Blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificar" />
</androidx.constraintlayout.widget.ConstraintLayout>